# FPM-Mac-Updater

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: main.rs
src/utils/: mod.rs
