[package]
authors = ["jsj1027 <jsj1027@g.rit.edu>"]
edition = "2018"
name    = "pplustools"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parallel-getter = "0.2.0"
reqwest         = { version = "0.10.6", features = ["json"] }
serde           = { version = "1.0.114", features = ["derive"] }
tokio           = { version = "0.2.21", features = ["macros"] }
zip             = "0.5.6"
tempfile = "3.1.0"
bsdiff = "0.1.3"
